--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,10 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
 h3 {
   color: #ffffff;
   font-size: 1.5rem;
@@ -87,7 +91,7 @@ thead {
     display: none;
   }
   h1 {
-    font-size: 1.1rem;
+    font-size: 1.8rem;
   }
   h2 {
     font-size: 1rem;
